test/functions/bradc/minmaxDefaultArgs1a.good
minmaxDefaultArgs1a.chpl:1: In function 'foo':
minmaxDefaultArgs1a.chpl:2: error: statement uses variable 'min' to define itself
minmaxDefaultArgs1a.chpl:2: note: the variable 'min' is used to define itself here
minmaxDefaultArgs1a.chpl:3: error: statement uses variable 'max' to define itself
minmaxDefaultArgs1a.chpl:3: note: the variable 'max' is used to define itself here
